# ArticleTagging

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.claude/: CLAUDE.md
configs/: dataset_fashion.yaml  eval_v2_guided.yaml  eval_v3_qwen3vl_30b.yaml  serving_fashion_adapter.yaml  serving_fashion_qwen3vl_30b.yaml  serving_fashion_qwen3vl_8b.yaml  training_fashion.yaml  training_fashion_guided_test.yaml  training_fashion_qwen3vl_30b.yaml  training_fashion_qwen3vl_8b.yaml
configs/schemas/: example_books.yaml  example_phones.yaml  fashion.yaml
configs/sites/: _reference.yaml  books_toscrape.yaml
inspiration/: How 1 hour of fine-tuning beat 3 weeks of RAG engineering _ by leboncoin tech _ leboncoin tech _ Mar, 2026 _ Medium.html
notebooks/: setup_and_benchmark.ipynb
reports/: EXPERIMENTS.md  latency_benchmark.json  latency_benchmark.md
reports/v0_baseline/: eval_result.json
reports/v0_plus_prompt/: eval_result.json
reports/v2_finetuned/: eval_result.json
reports/v2_guided/: eval_result.json  predictions.jsonl
reports/v2_guided_v0p_prompt/: eval_result.json
reports/v2_no_guided/: eval_result.json
reports/v2_v0p_guided/: eval_result.json  predictions.jsonl
reports/v2_v0p_no_guided/: eval_result.json
reports/v2_v0p_prompt/: eval_result.json
scripts/: bench_latency.py  benchmark_qwen3vl_30b.py  benchmark_qwen3vl_8b.py  eval_baseline.py  lightning_setup.sh
src/article_tagging/: __init__.py
src/article_tagging/cli/: main.py
src/article_tagging/configs/: __init__.py  models.py
src/article_tagging/dataset/: cleaning.py  formatter.py  (+2 more)
(+16 files in other folders)
